--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@biesbjerg/ngx-translate-extract",
-  "version": "2.3.4",
+  "timurbazarbaev": "https://github.com/timurbazarbaev/ngx-translate-extract/archive/master",
   "description": "Extract strings from projects using ngx-translate",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
